--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-./__pycache__/
-./bin/
-./etc/
-./include/
-./lib/
-./lib64/
-./share/
-./pyvenv.cfg
-./pyrightconfig.json
-./testGUI*
-./*.jpg
-./datasets
+__pycache__/
+bin/
+etc/
+include/
+lib/
+lib64/
+share/
+pyvenv.cfg
+pyrightconfig.json
+testGUI*
+*.jpg
+datasets
