--- a/config.toml
+++ b/config.toml
@@ -1,27 +1,30 @@
 [yolo]
-model = "./modelYOLO/best-car-300.pt"
-tracker = "./customTracker.yaml"      # optional, default ./bytetrack.yaml
-persist = true                        # optional, default false
-conf = 0.7                            # optional, default 0.7
-classes = [0]                         # optional, default [0]
+# model = "./modelYOLO/best-car-300.pt"
+model = "./modelYOLO/mask_face.pt"
+# tracker = "./customTracker.yaml" # optional, default bytetrack.yaml
+# persist = true # optional, default false
+conf = 0.4    # optional, default 0.7
+classes = [1] # optional, default [0]
 
 [screens.alpha]
-source = "http://220.254.72.200/nphMotionJpeg?Resolution=640x640&Quality=Standard"
-scale = 1.0                                                                        # optional, default 1
+# source = "http://220.254.72.200/nphMotionJpeg?Resolution=640x640&Quality=Standard"
+source = "rtsp://192.168.10.11:8080/h264_pcm.sdp"
+# source = "rtsp://192.168.1.105:554/user=admin&password=&channel=2&stream=0.sdp?"
+scale = 1.0 # optional, default 1
 
 [screens.alpha.filter.fps]
 index = 0
 
-[screens.alpha.filter.trailBalls] # require [yolo]
-index = 1
-maxBalls = 30     # optional, default 30
-ballThickness = 5 # optional, default 5
-
-[screens.alpha.filter.stopBoxes] # require [yolo]
-index = 2
-stopTime = 5                   # optional, default 5s 
-triggerColor = [56, 26, 211]   # optional, color set by format [Blue Green Red]
-neutralColor = [128, 128, 128] # optional, color set by format [Blue Green Red]
+# [screens.alpha.filter.trailBalls] # require [yolo]
+# index = 1
+# maxBalls = 30     # optional, default 30
+# ballThickness = 5 # optional, default 5
+# 
+# [screens.alpha.filter.stopBoxes] # require [yolo]
+# index = 2
+# stopTime = 5                   # optional, default 5s 
+# triggerColor = [56, 26, 211]   # optional, color set by format [Blue Green Red]
+# neutralColor = [128, 128, 128] # optional, color set by format [Blue Green Red]
 
 # [screens.alpha.record] # optional
 # output = "haha.mp4"
